-
Bug
-
Resolution: Done
-
P2: Important
-
5.1.0 , 5.3.0
-
None
-
Mac OSX10.8
-
-
ebc729b3c3493f2da9c00eb4ab53ca56f6042c87
Open any QWidget and keep holding option key and then hit alphabet key, it gives wrong value.
- relates to
-
QTBUG-35968 support native event in qtestlib
-
- Open
-
- replaces
-
QTBUG-39357 REGRESSION: For Option+<key> on Mac, event.key in Keys.onPressed is no longer guaranteed to equal <key>
-
- Closed
-